Voice channel video fix
User panel won't overlap the video area.

--- a/minicord-theme.css
+++ b/minicord-theme.css
@@ -721,6 +721,18 @@ div[style='height: 8px;'] {
     left: calc(76px + 7px + var(--servers-list-left-diff));
     transition-delay: var(--transition-delay-enter);
 }
+.content_c48ade:has(.video_cb9592) .panels_c48ade[aria-label='User area'] {
+    left: calc(76px + 7px - 57px - 14px);
+    transition-delay: var(--transition-delay-enter);
+}
+/* .content_c48ade:has(.video_cb9592):has(.sidebarList_c48ade.sidebarListRounded_c48ade:hover) .panels_c48ade[aria-label='User area'] {
+    left: calc(76px + 7px - 57px - 14px + var(--server-channels-left-diff));
+    transition-delay: var(--transition-delay-enter);
+}
+.content_c48ade:has(.video_cb9592):has(.wrapper_ef3116.guilds_c48ade:hover) .panels_c48ade[aria-label='User area'] {
+    left: calc(76px + 7px - 57px - 14px);
+    transition-delay: var(--transition-delay-enter);
+} */
 .content_c48ade:has(.container__133bf) .panels_c48ade[aria-label='User area'],
 .content_c48ade:has(.chat_f75fb0.container_f391e3) .panels_c48ade[aria-label='User area'],
 .content_c48ade:has(.applicationStore_f07d62) .panels_c48ade[aria-label='User area'],
